# context-osv6

./: .brooks-lint-history.json  .gitignore  AGENTS.md  AGENT_PROMPT_INJECTION_ANALYSIS.md  CODE_REVIEW_2026-05-06.md  CONTEXT.md  FRONTEND_DESIGN_MODE.md  FUNCTIONAL_ACCEPTANCE_CHECKLIST.md  PRD_RUST.md.autofix.tmp  PRD_RUST.md.bak.garbled  TECHNICAL_UPGRADES.md  tmp-login.json  tmp-login.out
avrag-rs/: .env.bak-20260413-140607  .env.example  .gitignore  .handoff-0006-all-stages.md  .handoff-0006-stage1.md  CLAUDE.md  Cargo.toml  DEV_PLAN.md  DEV_PLAN_V6_FRONTEND.md  GAP_ANALYSIS.md  README.md  docker-compose.keygen.yml  docker-compose.milvus.yml  handoff-rag-evaluator-fix.md  playwright.config.ts
avrag-rs/.cargo/: config.toml  local-machine.toml.example
avrag-rs/.github/workflows/: integration-e2e.yml  nightly-llm-real.yml  nightly-quality.yml  smoke-e2e.yml  weekly-regression.yml
avrag-rs/.run/: .env.runtime  capture_preview_pages.mjs  check_preview_routes.mjs  start_services.sh
avrag-rs/.serena/: project.yml
avrag-rs/docs/: HEALTH_OPTIMIZATION_HANDOFF_2026-06-11.md  README.md  agent-harness-chat-tools.md  architecture-review-2026-06.md  brooks-architecture-audit-2026-06-13.md  brooks-merged-fix-plan-2026-06-12.md  brooks-merged-fix-plan-2026-06-13-v6.md  brooks-merged-fix-plan-2026-06-13-v7.md  brooks-pr-review-2026-06-12-v3.md  brooks-pr-review-2026-06-12.md  brooks-pr-review-2026-06-13-v6.md  brooks-pr-review-2026-06-13-v7.md  brooks-tech-debt-assessment-2026-06-12.md  brooks-tech-debt-assessment-2026-06-13.md  brooks-test-quality-review-2026-06-12.md  brooks-test-quality-review-2026-06-13.md  code-review-checklist.md  dev-plan-2026-06.md  e2e-analysis-framework.md  e2e-bridge-followup-2026-06-09.md  e2e-codegen-memory-tests-design-2026-06-10.md  e2e-fix-plan-2026-06.md  e2e-gates.md  e2e-test-registry.yaml  full-functional-e2e-guide.md  ingestion-routing-discussion-2026-06-10.md  legal-compliance-pages-design-2026-06-13.md  liteparse-paddle-ingestion-architecture-2026-06-13.md  memory-recall-gap-2026-06-13.md  model-provider-matrix-2026-03.md  product-e2e-plan.md  prompts-memory-doc-profile-optimization-2026-06-10.md  query-library-design-2026-06-14.md  t13-app-split-inventory.md  visual-pdf-ingest-requirements-2026-06-10.md
avrag-rs/e2e/: README.md  debug-ui.spec.ts  helpers.ts  rust-frontend-e2e.spec.ts  visual-ui.spec.ts
avrag-rs/graphify-out/: manifest.json
avrag-rs/migrations/: 0001_core_platform.down.sql  0001_core_platform.up.sql  0002_ingestion_tasks.down.sql  0002_ingestion_tasks.up.sql  0003_chunk_search.down.sql  0003_chunk_search.up.sql  0004_share_admin.down.sql  0004_share_admin.up.sql  0005_share_public_lookup.down.sql  0005_share_public_lookup.up.sql  0006_admin_access.down.sql  0006_admin_access.up.sql  0007_billing.down.sql  0007_billing.up.sql  0008_api_keys_memory_notifications.down.sql  0008_api_keys_memory_notifications.up.sql  0009_api_key_admin_lookup.down.sql  0009_api_key_admin_lookup.up.sql  0010_auth_password_reset.down.sql  0010_auth_password_reset.up.sql  0011_share_collab_upload.down.sql  0011_share_collab_upload.up.sql  0012_feature_flags.up.sql  0013_feature_flag_change_requests.down.sql  0013_feature_flag_change_requests.up.sql  0014_document_assets.down.sql  0014_document_assets.up.sql  0015_document_multimodal_chunks.down.sql  0015_document_multimodal_chunks.up.sql  0016_chat_answer_blocks.down.sql  0016_chat_answer_blocks.up.sql  0017_session_share_settings.down.sql  0017_session_share_settings.up.sql  0018_user_usage_limits.down.sql  0018_user_usage_limits.up.sql  0019_observability_events.down.sql  0019_observability_events.up.sql  0020_auth_session_version.down.sql  0020_auth_session_version.up.sql  0021_document_parse_runs.down.sql  (+78 more)
avrag-rs/modes/: chat.yaml  rag.yaml  search.yaml  write_refine.yaml
avrag-rs/prompts/: README.md  chat_agent_system.txt  rag_answer_system.txt  rag_plan_system.txt  rag_planner_system.txt  rag_strategy_eval_system.txt  search_strategy_eval_system.txt  session_summary_system.txt  summary_finalize_user.tmpl  summary_generation.v1.tmpl  summary_user.tmpl  synthesizer_user.tmpl  triplet_extraction_system.txt  user_profile_extraction_system.txt  web_search_plan_system.txt  web_search_system.txt
avrag-rs/python/: install_sdk.sh  verify_sdk.py
avrag-rs/scripts/: benchmark_triplet_models.sh  capture_preview_pages.mjs  capture_preview_pages.py  check-e2e-env.sh  check-storage-config-parity.sh  compare_figma_playwright.py  dev-services-down.sh  dev-services-up.sh  e2e-env.sh  fix-contract-imports.py  generate-e2e-test-registry.py  office-parser-down.sh  office-parser-up.sh  pdf-renderer-down.sh  pdf-renderer-up.sh  promote-llm-real-baseline.sh  run-liteparse-staging-e2e.sh  run-product-smoke-e2e.sh  run-staging-ingest-e2e.sh  run_figma_parity.ps1  sync-keys.sh  upload_pdf_to_milvus.py  visual_diff_report.py
contracts/: Cargo.toml  typeshare.toml
contracts/bindings/: ChatActivitySourcePreview.ts
contracts/src/: admin.rs  agent_permissions.rs  auth.rs  auth_runtime.rs  billing.rs  chat.rs  documents.rs  errors.rs  lib.rs  notebooks.rs  preferences.rs  rag_execute.rs  share.rs  tool_call.rs  usage_limit.rs  workspaces.rs
contracts/tests/: chat_json.rs  module_fixtures.rs  rag_execute_contract.rs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend_rust/: AGENTS.md  Cargo.toml  DELIVERY_HANDOFF.md  FRONTEND_PRD.md  PLAN.md  README.md  index.html  package.json  tailwind.config.js
frontend_rust/.run/: frontend-static.pid  preview.html  spa_server.py
frontend_rust/docs/: UI_DRIFT_PREVENTION.md  dashboard_content_seed.md  dashboard_interaction_spec.md  dashboard_page_spec.md  dashboard_workspace_wiring_plan.md  frontend_dev_loop.md  stylance_cleanup_checklist.md  stylance_migration_plan.md  workspace_content_seed.md  workspace_interaction_spec.md  workspace_page_spec.md
frontend_rust/scripts/: build-stylance-css.sh  dev-ui.sh  sync_design_tokens.py  ui_drift_allowlist.txt  ui_drift_guard.py  watch_design_tokens.py
frontend_rust/tests/: text_layout_assets.smoke.mjs
(+2584 files in other folders)
