[package]
name = "contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }
typeshare = "1.0"
ts-rs = { version = "10", features = ["serde-compat"] }
utoipa = { version = "5.5", features = ["uuid", "chrono"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[[bin]]
name = "export-types"
path = "src/bin/export_types.rs"

