[workspace]
resolver = "2"
members = ["crates/web-sdk", "crates/web-ui"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"
thiserror = "2.0.17"

# Leptos
leptos = { version = "0.8", features = ["nightly"] }
leptos_router = { version = "0.8", features = ["nightly"] }
leptos_meta = { version = "0.8", features = ["nightly"] }
leptos_axum = "0.8"

# Axum (for SSR integration)
axum = { version = "0.8.6", features = ["json", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# Async streaming for SSE
async-stream = "0.3.6"
futures-util = "0.3"
