[workspace]
resolver = "2"
members = ["crates/web-dev-server", "crates/web-sdk", "crates/web-ui"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"
thiserror = "2.0.17"

# Leptos
leptos = { version = "0.8", features = ["nightly"] }
leptos_router = { version = "0.8", features = ["nightly"] }
leptos_meta = { version = "0.8", features = ["nightly"] }
leptos_axum = "0.8"

# Axum (for SSR integration)
axum = { version = "0.8.6", features = ["json", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# Async streaming for SSE
async-stream = "0.3.6"
futures-util = "0.3"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug = 0
codegen-units = 16

[[workspace.metadata.leptos]]
name = "frontend-rust"
output-name = "web_ui"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 3001
bin-package = "frontend-web-dev-server"
lib-package = "frontend-web-ui"
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-dev = "wasm-dev"
watch-additional-files = [
  "crates/web-ui/src/index.css",
  "crates/web-ui/src/styles/design_tokens.css",
  "tailwind.config.js",
]
