[package]
name = "avrag-worker"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1"
anyhow.workspace = true
base64 = "0.22"
analytics = { path = "../../crates/analytics" }
app-core = { path = "../../crates/app-core" }
avrag-auth = { path = "../../crates/auth" }
avrag-cache-redis = { path = "../../crates/cache-redis" }
avrag-llm = { path = "../../crates/llm" }
avrag-retrieval-data-plane = { path = "../../crates/retrieval-data-plane" }
avrag-storage-milvus = { path = "../../crates/storage-milvus" }
avrag-storage-pg = { path = "../../crates/storage-pg" }
chrono.workspace = true
common = { path = "../../crates/common" }
dotenvy = "0.15"
ingestion = { path = "../../crates/ingestion" }
lopdf = "0.35"
reqwest.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
text-splitter.workspace = true
tokio.workspace = true
tokio-util.workspace = true
telemetry = { path = "../../crates/telemetry" }
tracing.workspace = true
uuid.workspace = true
avrag-billing = { path = "../../crates/billing" }
