[package]
name = "app-admin"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
app-core = { path = "../app-core" }
avrag-auth = { path = "../auth" }
avrag-storage-pg = { path = "../storage-pg" }
common = { path = "../common" }
contracts = { path = "../../../contracts" }
chrono.workspace = true
serde_json.workspace = true
uuid.workspace = true
