[package]
name = "app-bootstrap"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes = "1"
futures = "0.3"
chrono.workspace = true
common = { path = "../common" }
contracts = { path = "../../../contracts" }
ingestion-types = { path = "../ingestion-types" }
serde.workspace = true
serde_json.workspace = true
analytics = { path = "../analytics" }
app-admin = { path = "../app-admin" }
app-billing = { path = "../app-billing" }
app-chat = { path = "../app-chat" }
app-core = { path = "../app-core" }
app-documents = { path = "../app-documents" }
avrag-auth = { path = "../auth" }
avrag-billing = { path = "../billing" }
avrag-cache-redis = { path = "../cache-redis" }
avrag-chatmemory = { path = "../chatmemory" }
avrag-guardrails = { path = "../guardrails" }
avrag-llm = { path = "../llm" }
avrag-rag-core = { path = "../rag-core" }
avrag-search = { path = "../search" }
avrag-share = { path = "../share" }
avrag-storage-milvus = { path = "../storage-milvus" }
avrag-storage-pg = { path = "../storage-pg" }
hex.workspace = true
bcrypt = "0.15"
redis.workspace = true
sha2.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
telemetry = { path = "../telemetry" }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
test-support = []

[dev-dependencies]
app-core = { path = "../app-core" }
tokio.workspace = true
