[package]
name = "app-chat"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
dev-tools = []
eval = []
write-mode = []  # WIP: gates the unfinished write-mode refine-experiment bin

[dependencies]
analytics = { path = "../analytics" }
anyhow.workspace = true
async-trait.workspace = true
app-admin = { path = "../app-admin" }
app-billing = { path = "../app-billing" }
app-core = { path = "../app-core" }
app-documents = { path = "../app-documents" }
avrag-billing = { path = "../billing" }
avrag-chatmemory = { path = "../chatmemory" }
avrag-code-interpreter = { path = "../code-interpreter" }
avrag-guardrails = { path = "../guardrails" }
avrag-llm = { path = "../llm" }
avrag-rag-core = { path = "../rag-core" }
avrag-retrieval-data-plane = { path = "../retrieval-data-plane" }
avrag-search = { path = "../search" }
chrono.workspace = true
common = { path = "../common" }
contracts = { path = "../../../contracts" }
heavytail = { path = "../heavytail" }
evalexpr.workspace = true
futures = "0.3"
regex.workspace = true
reqwest.workspace = true
rig-core = "0.36.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
telemetry = { path = "../telemetry" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
app-core = { path = "../app-core" }
avrag-storage-pg = { path = "../storage-pg" }

[[bin]]
name = "refine-experiment"
required-features = ["write-mode"]
