[package]
name = "app-core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
analytics = { path = "../analytics" }
contracts = { path = "../../../contracts" }
serde.workspace = true
avrag-retrieval-data-plane = { path = "../retrieval-data-plane" }
avrag-rag-core-ports = { path = "../rag-core-ports" }
avrag-llm = { path = "../llm" }
bytes = "1"
futures = "0.3"
ingestion = { path = "../ingestion" }
ingestion-types = { path = "../ingestion-types" }
telemetry = { path = "../telemetry" }
common = { path = "../common" }
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
common = { path = "../common" }
tokio.workspace = true
