[package]
name = "app-documents"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
analytics = { path = "../analytics" }
anyhow.workspace = true
app-billing = { path = "../app-billing" }
app-core = { path = "../app-core" }
async-trait.workspace = true
avrag-rag-core = { path = "../rag-core" }
bytes = "1"
common = { path = "../common" }
contracts = { path = "../../../contracts" }
futures = "0.3"
ingestion = { path = "../ingestion" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
app-billing = { path = "../app-billing" }
app-core = { path = "../app-core" }
async-trait.workspace = true
common = { path = "../common" }
contracts = { path = "../../../contracts" }
ingestion-types = { path = "../ingestion-types" }
tokio.workspace = true
