[package]
name = "app"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
analytics = { path = "../analytics" }
bytes = "1"
contracts = { path = "../../../contracts" }
serde.workspace = true
avrag-auth = { path = "../auth" }
avrag-billing = { path = "../billing" }
avrag-storage-pg = { path = "../storage-pg" }
avrag-storage-milvus = { path = "../storage-milvus" }
avrag-search = { path = "../search" }
avrag-chatmemory = { path = "../chatmemory" }
avrag-llm = { path = "../llm" }
avrag-rag-core = { path = "../rag-core" }
avrag-cache-redis = { path = "../cache-redis" }
avrag-guardrails = { path = "../guardrails" }
telemetry = { path = "../telemetry" }
common = { path = "../common" }
chrono.workspace = true
futures = "0.3"
hex.workspace = true
hmac.workspace = true
ingestion = { path = "../ingestion" }
serde_json.workspace = true
sha2.workspace = true
reqwest.workspace = true
redis.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
rig-core = "0.36.0"
regex.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
evalexpr.workspace = true
avrag-code-interpreter = { path = "../code-interpreter" }

[dev-dependencies]
