[package]
name = "app"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
product-e2e = ["dep:transport-http", "dep:axum"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
app-admin = { path = "../app-admin" }
app-billing = { path = "../app-billing" }
app-bootstrap = { path = "../app-bootstrap", features = ["test-support"] }
app-chat = { path = "../app-chat" }
app-core = { path = "../app-core" }
app-documents = { path = "../app-documents" }
analytics = { path = "../analytics" }
bytes = "1"
contracts = { path = "../../../contracts" }
serde.workspace = true
avrag-auth = { path = "../auth" }
avrag-billing = { path = "../billing" }
avrag-llm = { path = "../llm" }
avrag-rag-core = { path = "../rag-core" }
avrag-search = { path = "../search" }
avrag-share = { path = "../share" }
common = { path = "../common" }
chrono.workspace = true
futures = "0.3"
hex.workspace = true
hmac.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sha2.workspace = true
telemetry = { path = "../telemetry" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
axum = { workspace = true, optional = true }
transport-http = { path = "../transport-http", optional = true }

[dev-dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
avrag-storage-pg = { path = "../storage-pg" }
ingestion = { path = "../ingestion" }
redis.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["process"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio"] }
