[package]
name = "avrag-billing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
avrag-storage-pg = { path = "../storage-pg" }
chrono.workspace = true
common = { path = "../common" }
hmac.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
rsa = { version = "0.9", features = ["sha2", "pem"] }
base64 = "0.22"

[dev-dependencies]
rand = "0.8"
sqlx = { version = "0.8", features = ["macros", "migrate"] }
