[package]
name = "avrag-cache-redis"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
contracts = { path = "../../../contracts" }
redis.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
thiserror = "2"
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["serde", "v4"] }
