[package]
name = "avrag-chatmemory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
app-core = { path = "../app-core" }
contracts = { path = "../../../contracts" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
common = { path = "../common" }
avrag-auth = { path = "../auth" }
