[package]
name = "avrag-code-interpreter"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile = "3"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
