[package]
name = "avrag-code-interpreter"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
libc = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile = "3"
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "process", "rt", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
