[package]
name = "common"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
contracts = { path = "../../../contracts" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url = "2"
utoipa.workspace = true
uuid.workspace = true
jieba-rs = { workspace = true }
