[package]
name = "heavytail"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "heavytail-analyze"
path = "src/bin/analyze.rs"

[[bin]]
name = "heavytail-experiment"
path = "src/bin/experiment.rs"

[dependencies]
avrag-llm = { path = "../llm" }
common = { path = "../common" }
jieba-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
once_cell = { workspace = true }
