[package]
name = "ingestion"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../../contracts" }
async-trait = "0.1"
anyhow.workspace = true
base64 = "0.22"
chrono.workspace = true
common = { path = "../common" }
ingestion-types = { path = "../ingestion-types" }
flate2 = "1"
lopdf = "0.35"
reqwest = { workspace = true, features = ["json", "multipart"] }
scraper = "0.22"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
text-splitter.workspace = true
tiktoken-rs.workspace = true
zip = "2.2"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
uuid.workspace = true
syn.workspace = true

[dev-dependencies]
insta.workspace = true
