[package]
name = "avrag-licensing"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
common = { path = "../common" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
urlencoding = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
