[package]
name = "avrag-llm"
edition = "2024"
rust-version = "1.93"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
text-splitter = { workspace = true }
tiktoken-rs = { workspace = true }

common = { path = "../common" }
telemetry = { path = "../telemetry" }
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
