[package]
name = "avrag-llm"
edition = "2024"
rust-version = "1.96"
version = "0.1.0"
license.workspace = true

[dependencies]
contracts = { path = "../../../contracts" }
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util.workspace = true
text-splitter = { workspace = true }
tiktoken-rs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }

avrag-rag-core-ports = { path = "../rag-core-ports" }
common = { path = "../common" }
telemetry = { path = "../telemetry" }
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"

[dev-dependencies]
avrag-cache-redis = { path = "../cache-redis" }
axum = { version = "0.8", features = ["macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
